# XiaoLin

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  deny.toml  docker-compose.yml  package-lock.json
crates/fastclaw-agent/: Cargo.toml  README.md
crates/fastclaw-agent/benches/: prompt_token_budget.rs
crates/fastclaw-agent/src/: agent_discovery.rs  autofix.rs  code_graph.rs  lib.rs  llm.rs  llm_plugin.rs  process_channel.rs  reactive_loop.rs  rpc.rs  runtime.rs  session_bridge.rs  subagent.rs  subagent_manager.rs  symbol_index.rs
crates/fastclaw-agent/tests/: deferred_tools.rs
crates/fastclaw-cli/: Cargo.toml  README.md
crates/fastclaw-cli/src/: main.rs  tui.rs
crates/fastclaw-cli/tests/: e2e_tui.rs
crates/fastclaw-collab/: Cargo.toml  README.md
crates/fastclaw-collab/src/: delegation.rs  lib.rs  mcp.rs  subagent_bridge.rs
crates/fastclaw-context/: Cargo.toml  README.md
crates/fastclaw-context/benches/: compaction_layers.rs  token_estimation.rs
crates/fastclaw-context/src/: budget.rs  cached_microcompact.rs  collapse.rs  compressor.rs  engine.rs  keyword_interceptor.rs  lib.rs  manager.rs  model_context.rs  pipeline.rs  reactive.rs  snip.rs  user_profile.rs
crates/fastclaw-context/tests/: long_session.rs
crates/fastclaw-core/: Cargo.toml  README.md
crates/fastclaw-core/benches/: config_parsing.rs
crates/fastclaw-core/src/: agent_config.rs  bus.rs  channel.rs  channel_plugin.rs  config.rs  config_access.rs  error.rs  history_compat.rs  hub.rs  lib.rs  llm_plugin.rs  migration.rs  paths.rs  routing.rs  skill.rs  tool.rs  typed_turn_data.rs  types.rs  workspace.rs
crates/fastclaw-cron/: Cargo.toml  README.md
crates/fastclaw-cron/src/: lib.rs  scheduler.rs  store.rs
crates/fastclaw-dag/: Cargo.toml  README.md
crates/fastclaw-dag/src/: checkpoint.rs  definition.rs  events.rs  executor.rs  expression.rs  graph.rs  lib.rs
crates/fastclaw-eval/: Cargo.toml  README.md
crates/fastclaw-eval/src/: lib.rs
crates/fastclaw-evolution/: Cargo.toml  README.md
crates/fastclaw-evolution/src/: distiller.rs  feedback.rs  lib.rs  promotion.rs  skill_extractor.rs  skill_gap.rs  skill_store.rs  trajectory.rs
crates/fastclaw-gateway/: Cargo.toml  README.md
crates/fastclaw-gateway/src/: ask_question_card.rs  channel_tool.rs  chat_pipeline.rs  consolidation.rs  coordinator.rs  cron_tool.rs  error.rs  lib.rs  mcp_tool.rs  memory_scope.rs  notification_store.rs  scoped_tool.rs  state.rs  ws.rs
crates/fastclaw-gateway/tests/: e2e_real_llm.rs  e2e_scenarios.rs  integration.rs
crates/fastclaw-plugin/: Cargo.toml  README.md
crates/fastclaw-plugin/src/: bridge.rs  host.rs  lib.rs  manifest.rs  registry.rs  sandbox.rs  watcher.rs
crates/fastclaw-security/: Cargo.toml  README.md
crates/fastclaw-security/src/: auth.rs  dangerous_ops.rs  lib.rs  prompt_guard.rs  rate_limit.rs  ssrf.rs
crates/fastclaw-self-iter/: Cargo.toml  README.md
crates/fastclaw-self-iter/src/: engine.rs  sandbox_runner.rs
crates/fastclaw-session/: Cargo.toml  README.md
crates/fastclaw-session-actor/: Cargo.toml
crates/fastclaw-session-actor/src/: actor.rs  fanout.rs  handle.rs  interaction.rs  lib.rs  manager.rs  submission.rs  turn.rs
crates/fastclaw-session/src/: event_log.rs  lib.rs  models.rs  store.rs
crates/fastclaw-treesitter/: Cargo.toml
crates/fastclaw-treesitter/src/: chunker.rs  lib.rs  parser.rs  shell_ast.rs  symbols.rs
crates/xiaolin-agent/: Cargo.toml
crates/xiaolin-agent/benches/: output_asset_bench.rs  prompt_token_budget.rs
crates/xiaolin-agent/src/: agent_discovery.rs  autofix.rs  code_graph.rs  lib.rs  llm.rs  llm_plugin.rs  message_queue.rs  process_channel.rs  reactive_loop.rs  rpc.rs  session_bridge.rs  sidechain.rs  spawn_controller.rs  subagent.rs  subagent_manager.rs
crates/xiaolin-agent/tests/: deferred_tools.rs  quality_gates.rs  risk_repro.rs
crates/xiaolin-benchmark/: Cargo.toml
crates/xiaolin-benchmark/src/: grader.rs  lib.rs  live.rs  metrics.rs  report.rs  runner.rs  task.rs
crates/xiaolin-benchmark/tests/: agent_benchmark.rs  parse_tasks.rs
crates/xiaolin-context/: Cargo.toml
crates/xiaolin-context/benches/: compaction_layers.rs  token_estimation.rs
crates/xiaolin-context/src/: cached_microcompact.rs  collapse.rs  compressor.rs  engine.rs  keyword_interceptor.rs  lib.rs  model_context.rs  pipeline.rs  reactive.rs  snip.rs
crates/xiaolin-context/tests/: long_session.rs
crates/xiaolin-core/: Cargo.toml
crates/xiaolin-core/benches/: config_parsing.rs  skill_budget.rs
crates/xiaolin-core/src/: agent_config.rs  agent_markdown.rs  bus.rs  channel.rs  channel_plugin.rs  complexity.rs  config.rs  config_access.rs  credential_crypto.rs  error.rs  history_compat.rs  hub.rs  lib.rs  llm_plugin.rs  migration.rs  migration_test.rs  paths.rs  project.rs  project_mcp_approval.rs  protected_metadata.rs  routing.rs  rules.rs  skill.rs  skill_embedding.rs  skill_usage.rs  tool.rs  tool_runtime.rs  types.rs  workspace.rs
crates/xiaolin-cron/: Cargo.toml
crates/xiaolin-cron/src/: lib.rs  schedule.rs  scheduler.rs  store.rs
crates/xiaolin-evolution/: Cargo.toml  README.md
crates/xiaolin-evolution/src/: evaluator.rs  feedback.rs  lib.rs  promotion.rs  skill_extractor.rs  skill_gap.rs  skill_store.rs  trajectory.rs
crates/xiaolin-execpolicy/: Cargo.toml
crates/xiaolin-execpolicy/examples/: exec-policy.toml
crates/xiaolin-execpolicy/src/: amend.rs  config.rs  executable_name.rs  lib.rs  matcher.rs
crates/xiaolin-gateway/: Cargo.toml
crates/xiaolin-gateway/src/: agent_def_watcher.rs  ask_question_card.rs  audit.rs  channel_tool.rs  chat_pipeline.rs  consolidation.rs  cron_tool.rs  error.rs  extract.rs  git_watcher.rs  lib.rs  mcp_tool.rs  memory_monitor.rs  scoped_tool.rs  skill_watcher.rs
crates/xiaolin-gateway/tests/: e2e_real_llm.rs  e2e_scenarios.rs  integration.rs
crates/xiaolin-guardian/: Cargo.toml
crates/xiaolin-linux-sandbox/: Cargo.toml
crates/xiaolin-mcp/: Cargo.toml
crates/xiaolin-memory/: Cargo.toml
crates/xiaolin-model-router/: Cargo.toml
(+1583 files in other folders)
