[workspace]
members = [
    "crates/xiaolin-core",
    "crates/xiaolin-gateway",
    "crates/xiaolin-agent",
    "crates/xiaolin-session",
    "crates/xiaolin-memory",
    "crates/xiaolin-evolution",
    "crates/xiaolin-observe",
    "crates/xiaolin-security",
    "crates/xiaolin-sandbox",
    "crates/xiaolin-execpolicy",
    "crates/xiaolin-guardian",
    "crates/xiaolin-mcp",
    "crates/xiaolin-model-router",
    "crates/xiaolin-context",
    "crates/xiaolin-self-iter",
    "crates/xiaolin-cron",
    "crates/xiaolin-treesitter",
    "crates/xiaolin-network-proxy",
    "crates/xiaolin-tools-fs",
    "crates/xiaolin-tools-network",
    "crates/xiaolin-tools-browser",
    "crates/xiaolin-tools-code",
    "crates/xiaolin-linux-sandbox",
    "extensions/feishu",
    "extensions/wechat",
    "crates/xiaolin-protocol",
    "crates/xiaolin-session-actor",
    "crates/xiaolin-pty",
    "crates/xiaolin-app/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/example/xiaolin"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP / WebSocket
axum = { version = "0.7", features = ["ws", "json"] }
axum-extra = "0.9"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout", "compression-gzip"] }
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json5 = "0.4"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# Logging / Metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Graph
petgraph = "0.6"

# Vector search — usearch requires C++17 & GCC 12+
# On old compilers, build without the `usearch-backend` feature in xiaolin-memory
usearch = { version = "2", default-features = false }

# WASM
wasmtime = { version = "19", features = ["component-model"] }

# Crypto
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
constant_time_eq = "0.3"

# Embedding (local — hypembed is pure Rust, no ML runtime needed)
hypembed = "0.2"

# Concurrency
dashmap = "5"
arc-swap = "1"

# Utils
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-channel = "2"
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
notify = "6"
dirs = "5"
regex = "1"
cron = "0.12"

# TUI
ratatui = "0.29"
crossterm = "0.28"
tokio-tungstenite = "0.24"

# Protobuf
prost = "0.13"

# OpenAPI
utoipa = { version = "5", features = ["axum_extras"] }

# Testing
insta = "1"
proptest = "1"
criterion = { version = "0.5", features = ["async_tokio"] }

# ─── Workspace lints ─────────────────────────────────────────────────────────
# Shared lint configuration inherited by all workspace members via
# `[lints] workspace = true` in their Cargo.toml.
[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow common patterns that pedantic flags but are fine in practice:
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
struct_excessive_bools = "allow"
fn_params_excessive_bools = "allow"
wildcard_imports = "allow"
# These will be tightened over time:
similar_names = "allow"
single_match_else = "allow"
match_same_arms = "allow"
redundant_closure_for_method_calls = "allow"
items_after_statements = "allow"
doc_markdown = "allow"

# ─── Build profiles ──────────────────────────────────────────────────────────
# Dev: our crate code compiles unoptimized (fastest rebuilds), but all external
# dependencies are compiled at opt-level = 1.  This gives much better runtime
# performance during development without a full release-mode build, and
# significantly reduces link time because debug sections stay small.
[profile.dev]
opt-level = 0
debug = 1               # partial debug info — faster link, still debuggable
split-debuginfo = "unpacked"  # Linux: parallel debug-info extraction, speeds up linking

[profile.dev.package."*"]
opt-level = 1           # slightly optimise third-party crates in dev mode

# Proc-macro crates are always compiled for the host and benefit from more opt.
[profile.dev.build-override]
opt-level = 1

# Release: full optimisation + thin-LTO + strip debug symbols.
[profile.release]
opt-level = 3
lto = "thin"            # cross-crate inlining without full LTO overhead
codegen-units = 1       # single CGU for maximum inlining
strip = "debuginfo"     # smaller binary, no debug info leak in distributed app

