[package]
name = "fastclaw-agent"
version.workspace = true
edition.workspace = true

[features]
default = ["self-iter"]
self-iter = ["dep:fastclaw-self-iter"]
browser = ["dep:headless_chrome"]

[dependencies]
fastclaw-core = { path = "../fastclaw-core" }
fastclaw-context = { path = "../fastclaw-context" }
fastclaw-evolution = { path = "../fastclaw-evolution" }
fastclaw-session = { path = "../fastclaw-session" }
fastclaw-self-iter = { path = "../fastclaw-self-iter", optional = true }
fastclaw-memory = { path = "../fastclaw-memory", default-features = false }
fastclaw-security = { path = "../fastclaw-security" }
fastclaw-observe = { path = "../fastclaw-observe" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
async-trait.workspace = true
reqwest.workspace = true
uuid.workspace = true
chrono.workspace = true
futures.workspace = true
regex.workspace = true
rand = "0.8"
arc-swap.workspace = true
dashmap.workspace = true
tokio-util = "0.7"
url = "2"
headless_chrome = { version = "1", optional = true }
base64 = "0.22.1"
dirs.workspace = true
glob = "0.3"
metrics.workspace = true
similar = "2"
fastclaw-treesitter = { path = "../fastclaw-treesitter" }
encoding_rs = "0.8"
chardetng = "1.0"
pdf-extract = "0.10"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"

[[bench]]
name = "prompt_token_budget"
harness = false
