[package]
name = "fastclaw-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "fastclaw"
path = "src/main.rs"

[dependencies]
fastclaw-core = { path = "../fastclaw-core" }
fastclaw-gateway = { path = "../fastclaw-gateway" }
fastclaw-observe = { path = "../fastclaw-observe" }
fastclaw-session = { path = "../fastclaw-session" }
fastclaw-agent = { path = "../fastclaw-agent" }
fastclaw-protocol = { path = "../fastclaw-protocol" }
fastclaw-mcp = { path = "../fastclaw-mcp" }
fastclaw-hardening = { path = "../fastclaw-hardening" }
clap.workspace = true
clap_complete.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
reqwest.workspace = true
futures.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tokio-tungstenite.workspace = true
chrono.workspace = true
sqlx.workspace = true
unicode-width = "0.2"
syntect = { version = "5.3.0", features = ["default-fancy"] }

[dev-dependencies]
insta = "1"
