[package]
name = "fastclaw-dag"
version.workspace = true
edition.workspace = true

[dependencies]
fastclaw-core = { path = "../fastclaw-core" }
petgraph.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
futures.workspace = true
sqlx.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
