[package]
name = "fastclaw-eval"
version = "0.1.0"
edition = "2021"

[dependencies]
fastclaw-core = { path = "../fastclaw-core" }
fastclaw-agent = { path = "../fastclaw-agent" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
chrono = "0.4"
async-trait = "0.1"
