[package]
name = "fastclaw-evolution"
version.workspace = true
edition.workspace = true

[dependencies]
fastclaw-core = { path = "../fastclaw-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tracing.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
