[package]
name = "xiaolin-agent"
version.workspace = true
edition.workspace = true

[features]
default = ["self-iter"]
self-iter = ["dep:xiaolin-self-iter"]
browser = ["dep:headless_chrome"]

[dependencies]
bytes = "1"
xiaolin-core = { path = "../xiaolin-core" }
xiaolin-protocol = { path = "../xiaolin-protocol" }
xiaolin-session-actor = { path = "../xiaolin-session-actor" }
xiaolin-context = { path = "../xiaolin-context" }
xiaolin-evolution = { path = "../xiaolin-evolution" }
xiaolin-session = { path = "../xiaolin-session" }
xiaolin-self-iter = { path = "../xiaolin-self-iter", optional = true }
xiaolin-memory = { path = "../xiaolin-memory", default-features = false }
xiaolin-security = { path = "../xiaolin-security" }
xiaolin-sandbox = { path = "../xiaolin-sandbox" }
xiaolin-network-proxy = { path = "../xiaolin-network-proxy" }
xiaolin-execpolicy = { path = "../xiaolin-execpolicy" }
xiaolin-guardian = { path = "../xiaolin-guardian" }
xiaolin-observe = { path = "../xiaolin-observe" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
async-trait.workspace = true
reqwest.workspace = true
uuid.workspace = true
chrono.workspace = true
futures.workspace = true
regex.workspace = true
rand = "0.8"
arc-swap.workspace = true
dashmap.workspace = true
tokio-util = "0.7"
tokio-stream = "0.1"
url = "2"
headless_chrome = { version = "1", optional = true }
base64 = "0.22.1"
dirs.workspace = true
glob = "0.3"
metrics.workspace = true
similar = "2"
xiaolin-treesitter = { path = "../xiaolin-treesitter" }
encoding_rs = "0.8"
chardetng = "1.0"
pdf-extract = "0.10"
rusqlite = { version = "0.29", features = ["bundled"] }
notify.workspace = true
shell-words = "1.1.1"
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"

[[bench]]
name = "prompt_token_budget"
harness = false
