[package]
name = "xiaolin-agent"
version.workspace = true
edition.workspace = true

[features]
default = ["self-iter"]
self-iter = ["dep:xiaolin-self-iter"]
browser = ["dep:xiaolin-tools-browser"]

[dependencies]
bytes = "1"
xiaolin-core = { path = "../xiaolin-core" }
xiaolin-mcp = { path = "../xiaolin-mcp" }
xiaolin-protocol = { path = "../xiaolin-protocol" }
xiaolin-session-actor = { path = "../xiaolin-session-actor" }
xiaolin-context = { path = "../xiaolin-context" }
xiaolin-evolution = { path = "../xiaolin-evolution" }
xiaolin-session = { path = "../xiaolin-session" }
xiaolin-self-iter = { path = "../xiaolin-self-iter", optional = true }
xiaolin-memory = { path = "../xiaolin-memory", default-features = false }
xiaolin-security = { path = "../xiaolin-security" }
xiaolin-sandbox = { path = "../xiaolin-sandbox" }
xiaolin-network-proxy = { path = "../xiaolin-network-proxy" }
xiaolin-tools-fs = { path = "../xiaolin-tools-fs" }
xiaolin-pty = { path = "../xiaolin-pty" }
xiaolin-tools-network = { path = "../xiaolin-tools-network" }
xiaolin-tools-code = { path = "../xiaolin-tools-code" }
xiaolin-execpolicy = { path = "../xiaolin-execpolicy" }
xiaolin-guardian = { path = "../xiaolin-guardian" }
xiaolin-observe = { path = "../xiaolin-observe" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
async-trait.workspace = true
reqwest.workspace = true
uuid.workspace = true
chrono.workspace = true
futures.workspace = true
regex.workspace = true
rand = "0.8"
arc-swap.workspace = true
dashmap.workspace = true
async-stream = "0.3"
tokio-util = "0.7"
tokio-stream = "0.1"
url = "2"
xiaolin-tools-browser = { path = "../xiaolin-tools-browser", optional = true }
base64 = "0.22.1"
dirs.workspace = true
glob = "0.3"
metrics.workspace = true
similar = "2"
xiaolin-treesitter = { path = "../xiaolin-treesitter" }
encoding_rs = "0.8"
chardetng = "1.0"
pdf-extract = "0.10"
rusqlite = { version = "0.29", features = ["bundled"] }
notify.workspace = true
shell-words = "1.1.1"
thiserror.workspace = true
arboard = "3"
png = "0.17"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"

[[bench]]
name = "prompt_token_budget"
harness = false
