[package]
name = "xiaolin-core"
version.workspace = true
edition.workspace = true

[dependencies]
bytes = "1"
xiaolin-protocol = { path = "../xiaolin-protocol" }
serde.workspace = true
serde_json.workspace = true
json5.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
dirs.workspace = true
async-trait.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
dashmap.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
constant_time_eq.workspace = true
reqwest.workspace = true
regex = "1"
serde_yaml_ng = "0.10"
glob = "0.3"
globset = "0.4"
sqlx.workspace = true
tar = "0.4"
tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
criterion.workspace = true

[[bench]]
name = "config_parsing"
harness = false
