[package]
name = "xiaolin-evolution"
version.workspace = true
edition.workspace = true

[dependencies]
xiaolin-core = { path = "../xiaolin-core" }
blake3 = "1.8.5"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tracing.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
