[package]
name = "xiaolin-execpolicy"
version.workspace = true
edition.workspace = true
description = "TOML-based command execution policy engine for XiaoLin"

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
toml = "0.8"
fs2 = "0.4"

[dev-dependencies]
tempfile = "3"
