[package]
name = "xiaolin-guardian"
version.workspace = true
edition.workspace = true
description = "LLM-based security review agent for XiaoLin command execution"

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
