[package]
name = "xiaolin-linux-sandbox"
version.workspace = true
edition.workspace = true
description = "Standalone Linux sandbox binary for XiaoLin (bubblewrap + landlock + seccomp)"

[[bin]]
name = "xiaolin-linux-sandbox"
path = "src/main.rs"

[dependencies]
anyhow = "1"
xiaolin-security = { path = "../xiaolin-security" }
xiaolin-path = { path = "../xiaolin-path" }
nix = { version = "0.29", features = ["process", "signal", "mount", "sched", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
ctrlc = "3"
which = "7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
globset = "0.4"
url = "2"

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }

[dev-dependencies]
tempfile = "3"
