[package]
name = "xiaolin-mcp"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
xiaolin-core = { path = "../xiaolin-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
async-trait.workspace = true
reqwest.workspace = true
futures.workspace = true
sha2.workspace = true
base64.workspace = true
rand.workspace = true
dirs.workspace = true
tokio-tungstenite.workspace = true
chrono.workspace = true

[dev-dependencies]
axum.workspace = true
tempfile = "3.27.0"
